--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
+button:focus {
+  outline: white;
+  box-shadow: white;
+}
+button:hover {
+  outline: rgb(86, 43, 185);
+  box-shadow: white;
+}
 #root {
   max-width: 1280px;
   margin: 0 auto;
@@ -39,4 +47,57 @@
 
 .read-the-docs {
   color: #888;
+}
+
+
+ .input-box {
+  position: fixed;
+  top: 30%;
+  left: 0%;
+  background: #000000;
+  border-radius: 12px;
+  box-shadow: 0px 8px 40px rgba(10, 93, 131, 0.12);
+  padding: 32px 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  min-width: 260px;
+  gap: 16px;
+}
+
+.code-input {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 1rem;
+  padding: 12px;
+  min-height: 120px;
+  max-height: 500px;
+  margin-bottom: 12px;
+  width: 100%;
+  border-radius: 8px;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+  resize: vertical;
+  overflow-y: auto;
+  transition: border-color 0.2s;
+  text-align: left;
+  line-height: 1.5;
+  vertical-align: middle;
+}
+.call-input {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 1rem;
+  padding: 8px;
+  min-height: 16px;
+  max-height: 100px;
+  margin-bottom: 8px;
+  width: 100%;
+  border-radius: 8px;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+  resize: vertical;
+  overflow-y: auto;
+  transition: border-color 0.2s;
+  text-align: left;
+  line-height: 1.5;
+  vertical-align: middle;
 }
